<resources>
    <string name="app_name">Moreparkk</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="Email">Email</string>
    <string name="full_names">Full Names</string>
    <string name="passwordReg">Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgt">Enter Email</string>
    <string name="enter_email">Enter Email</string>
</resources>