<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/shape"
        android:layout_width="10dp"
        android:layout_height="match_parent"/>

    <ScrollView
        android:id="@+id/fullscreen"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:paddingTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<LinearLayout
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <ImageView
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </RelativeLayout>
<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:background="@drawable/round"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--</com.google.android.material.textfield.TextInputLayout>-->
<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:background="@color/white"-->
<!--        android:layout_marginStart="10dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->
    <EditText
        android:id="@+id/email"
        android:background="@drawable/round"
        android:inputType="textEmailAddress"
        android:textColor="@color/purple_700"
        android:hint="@string/Email"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"/>

    <EditText
            android:id="@+id/password"
            android:layout_below="@+id/email"
            android:background="@drawable/round"
            android:inputType="textPassword"
            android:textColor="@color/purple_500"
            android:hint="@string/password"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        />

<!--    </com.google.android.material.textfield.TextInputLayout>-->
<Button
    android:id="@+id/login"
    android:layout_marginTop="20dp"
    android:layout_below="@+id/password"
    android:layout_centerHorizontal="true"
    android:textColor="@color/color_primary"
    android:text="@string/login"
    android:layout_width="250dp"
    android:layout_height="40dp"
    android:background="@drawable/button"/>
</LinearLayout>

    </ScrollView>
<ImageView
    android:id="@+id/goto_reg"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginBottom="30dp"
    android:layout_marginStart="30dp"
    android:src="@drawable/plus"
    android:layout_marginEnd="-15dp"
    android:layout_width="100dp"
    android:layout_height="100dp"/>
</RelativeLayout>